Added middlewares and authorization using token

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT = 8080
 DEV_MODE = development
 MONGO_URL = mongodb+srv://nikhhilbiyani24:nikhilBiyani123@mernproject.dmlhiah.mongodb.net/
+JWT_SECRET = DUEQBFU8414183581H
